# hydra-stats

./: .gitignore  .taplo.toml  LICENSE  README.md  flake.nix  package.nix  pyproject.toml
src/hydra_stats/: __init__.py  __main__.py  cli.py  eval_sizes.py  formatting.py  queries.py  render.py  stores.py
